# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  README.md  main.cpp
OutputGeodetico/Ottaedro_b=2_c=2/: Cell0Ds.inp  Cell0Ds.txt  Cell1Ds.inp  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
OutputGeodetico/Ottaedro_b=2_c=2_DUALE/: Cell0Ds.inp  Cell0Ds.txt  Cell1Ds.inp  Cell1Ds.txt  Cell2Ds.txt  Cell3Ds.txt
SolidiPlatonici/icosaedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
SolidiPlatonici/icosaedro/paraview/: Cell0Ds.inp  Cell1Ds.inp
SolidiPlatonici/ottaedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
SolidiPlatonici/ottaedro/paraview/: Cell0Ds.inp  Cell1Ds.inp
SolidiPlatonici/tetraedro/: Cell0Ds.csv  Cell1Ds.csv  Cell2Ds.csv
SolidiPlatonici/tetraedro/paraview/: Cell0Ds.inp  Cell1Ds.inp
src/: CMakeLists.txt  Polyhedron.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_polyhedron.hpp
